--- a/charts/humio-metrics/templates/metricbeat-daemonset-configmap.yaml
+++ b/charts/humio-metrics/templates/metricbeat-daemonset-configmap.yaml
@@ -22,3 +22,6 @@ data:
       hosts: ['${ELASTICSEARCH_HOST:elasticsearch}:${ELASTICSEARCH_PORT:9200}']
       username: ${ELASTICSEARCH_USERNAME}
       password: ${ELASTICSEARCH_PASSWORD}
+      allow_older_versions: true  
+      
+    setup.ilm.enabled: false
