--- a/charts/humio-metrics/templates/metricbeat-daemonset-modules-configmap.yaml
+++ b/charts/humio-metrics/templates/metricbeat-daemonset-modules-configmap.yaml
@@ -31,18 +31,15 @@ data:
       processors:
       - drop_event.when.regexp:
           system.filesystem.mount_point: '^/(sys|cgroup|proc|dev|etc|host|lib)($|/)'
-  kubernetes.yml: |-
-    - module: docker
+  containerd.yml: |-
+    - module: containerd
       metricsets:
-        - container
-        - cpu
-        - diskio
-        - healthcheck
-        - info
         - memory
-        - network
-      hosts: ["unix:///var/run/docker.sock"]
+        - cpu
+        - blkio
+      hosts: ["http://localhost:1338"]
       period: 10s
+  kubernetes.yml: |-
     - module: kubernetes
       metricsets:
         - node
